Added description of ping command to scontrol man page.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -46,6 +46,10 @@ Display a description of scontrol options and commands.
 Print the Slurm job id corresponding to the supplied process id, \fIPROC_ID\fP,
 on the current node.
 .TP
+\fIping\fP
+Ping the primary and secondary slurmctld daemon and report if 
+they are responding.
+.TP
 \fIquiet\fP
 Print no warning or informational messages, only fatal error messages.
 .TP
