--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -46,7 +46,7 @@ Provide detailed event logging through program execution.
 .SH "ARGUMENTS"
 .TP
 \fBnode\fR
-The names of one or more comma separated nodes. Names may be specified using regular expressions.
+The names of one or more comma separated nodes. Names may be specified using node range expressions.
 For example "linux[00-07]" would indicate eight nodes, "linux00" through "linux07".
 .TP
 \fBpartition\fR
