--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -1,6 +1,6 @@
 .TH SLURMD "8" "October 2002" "slurmd 0.1" "Slurm components"
 .SH "NAME"
-slurmd \- The compute node daemon of Slurm.
+slurmd \- The compute node daemon for SLURM.
 .SH "SYNOPSIS"
 \fBslurmd\fR [\fIOPTIONS\fR...]
 .SH "DESCRIPTION"
