Describe what can be done with reconfig command.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -58,12 +58,18 @@ Terminate the execution of scontrol.
 .TP
 \fIreconfigure\fP
 Instruct all Slurm daemons to re-read the configuration file. 
+This command does not restart the daemons.
 This mechanism would be used to modify configuration parameters (Epilog, 
 Prolog, SlurmctldLogFile, SlurmdLogFile, etc.) register the physical 
 addition or removal of nodes from the cluster or recognize the change 
 of a node's configuration, such as the addition of memory or processors. 
 The Slurm controller (slurmctld) forwards the request all other daemons 
 (slurmd daemon on each compute node). Running jobs continue execution.
+Most configuration parameters can be changed by just running this command, 
+however, SLURM daemons should be shutdown and restarted if any of these 
+parameters are to be changed: AuthType, BackupAddr, BackupController, 
+ControlAddr, ControlMach, PluginDir, StateSaveLocation, SlurmctldPort 
+or SlurmdPort.
 .TP
 \fIshow\fP \fIENTITY\fP \fIID\fP
 Display the state of the specified entity with the specified identification.
