o Makefile.am : include META  o slurm.spec.in : fix bug in --with debug  o doc/man/man1/srun.1 : --kill-off was renamed to --no-kill

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -71,7 +71,7 @@ available. By default, \fB\-\-immediate\fR is off, and
 .B srun
 will block until resources become available.
 .TP
-\fB\-k\fR, \fB\-\-kill-off\fR
+\fB\-k\fR, \fB\-\-no-kill\fR
 Do not automatically terminate a job of one of the nodes it has been allocated 
 fails. The job will assume all responsibilities for fault-tolerance. The 
 default action is to terminate the job upon node failure.
